# pyhamiltonian

./: README.md  demo.py  pyproject.toml  pytest.ini  test.py
hamiltonian-construction/: hamiltonians.py
hamiltonian_construction/: hamiltonians.py
plotting/: n-dimensional-scripts.py  n_dimensional_scripts.py  plotters.py
src/hamiltonian_construction/: hamiltonians.py
src/plotting/: plotters.py
tests/: test.py  test_base_hamiltonian.py  test_lattice.py  test_many_body.py  test_single_particle.py
